<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00FFFFFF">

    <FrameLayout
        android:id="@+id/adsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tutorial_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/adsContainer">

        <ImageView
            android:id="@+id/bg_tutorial"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_tutorial"
            android:contentDescription="@string/content_des"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/header_tutorial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/bg_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/header_tutorial"
                android:contentDescription="@string/content_des"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/img_difficulty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/content_des"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/Level"
                app:layout_constraintTop_toBottomOf="@id/tv_name_plant"
                tools:background="@drawable/diff_5" />

            <TextView
                android:id="@+id/tv_name_plant"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/brianne_hand"
                android:gravity="center"
                android:shadowColor="#303030"
                android:shadowDx="3"
                android:shadowDy="3"
                android:shadowRadius="1"
                android:text="@string/n19"
                android:textColor="@color/white"
                android:textSize="30dp"
                app:layout_constraintBottom_toTopOf="@+id/img_difficulty"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/Name"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="7dp"
                android:fontFamily="@font/brianne_hand"
                android:shadowColor="#303030"
                android:shadowDx="3"
                android:shadowDy="3"
                android:shadowRadius="1"
                android:text="@string/name"
                android:textColor="@color/white"
                android:textSize="30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/Level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:fontFamily="@font/brianne_hand"
                android:shadowColor="#303030"
                android:shadowDx="3"
                android:shadowDy="3"
                android:shadowRadius="1"
                android:text="@string/level"
                android:textColor="@color/white"
                android:textSize="27dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Name" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/body_tutorial"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:background="@drawable/space"
            app:layout_constraintBaseline_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/footer_tutorial"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header_tutorial">

            <ImageView
                android:id="@+id/img_paper"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="10dp"
                android:background="@drawable/paper"
                android:contentDescription="@string/content_des"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/img_plant" />

            <ImageView
                android:id="@+id/img_plant"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/content_des"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:src="@drawable/d23_10" />

            <ImageView
                android:id="@+id/btn_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/ic_btn_close"
                android:contentDescription="@string/content_des"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/footer_tutorial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/btn_previous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_btn_next"
                android:contentDescription="@string/content_des" />

            <TextView
                android:id="@+id/tv_step"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:fontFamily="@font/brianne_hand"
                android:gravity="center"
                android:text="@string/step_test"
                android:textColor="@color/white"
                android:textSize="50sp" />

            <ImageView
                android:id="@+id/btn_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_btn_back"

                android:contentDescription="@string/content_des" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>